opam-version: "2.0"
version: "dev"
maintainer: "Romain Beauxis <toots@rastageeks.org>"
authors: "The Savonet Team <savonet-users@lists.sourceforge.net>"
homepage: "https://github.com/savonet/ocaml-frei0r"
bug-reports: "https://github.com/savonet/ocaml-frei0r/issues"
depends: ["ocaml" "ocamlfind"]
flags: light-uninstall
build: [
  ["./bootstrap"]
  ["./configure" "--prefix" prefix]
  [make "clean"]
  [make]
]
install: [make "install"]
remove: ["ocamlfind" "remove" "frei0r"]
depexts: [
  ["frei0r-devel"] {os-distribution = "centos"}
  ["frei0r-devel"] {os-distribution = "fedora"}
  ["frei0r-devel"] {os-distribution = "opensuse"}
  ["frei0r"] {os = "macos" & os-distribution = "homebrew"}
  ["frei0r-plugins-dev"] {os-distribution = "debian"}
  ["frei0r-plugins-dev"] {os-distribution = "ubuntu"}
]
dev-repo: "git+https://github.com/savonet/ocaml-frei0r.git"
