opam-version: "2.0"
name: "frei0r"
version: "0.1.2"
maintainer: "Romain Beauxis <toots@rastageeks.org>"
authors: "The Savonet Team <savonet-users@lists.sourceforge.net>"
homepage: "https://github.com/savonet/ocaml-frei0r"
bug-reports: "https://github.com/savonet/ocaml-frei0r/issues"
synopsis: "Bindings for the frei0r API which provides video effects"
depends: [
  "ocaml"
  "ocamlfind" {build}
]
build: [
  ["./bootstrap"] {dev}
  ["./configure" "--prefix" prefix]
  [make "clean"] {dev}
  [make]
]
install: [make "install"]
depexts: [
  ["frei0r-plugins-dev"] {os-distribution = "alpine"}
  ["frei0r-devel"] {os-distribution = "centos"}
  ["frei0r-devel"] {os-distribution = "fedora"}
  ["frei0r-devel"] {os-family = "suse"}
  ["frei0r"] {os = "macos" & os-distribution = "homebrew"}
  ["frei0r-plugins-dev"] {os-distribution = "debian"}
  ["frei0r-plugins-dev"] {os-distribution = "ubuntu"}
]
dev-repo: "git+https://github.com/savonet/ocaml-frei0r.git"
